# Test-task

./: .gitignore  CMakeLists.txt  README.md  build.bat
ConsoleApp/: CMakeLists.txt  ConsoleApp.vcxproj  main.cpp
CurvesLibrary/: CMakeLists.txt  Comparison.h  CurvesLibrary.sln  CurvesLibrary.vcxproj  CurvesLibrary.vcxproj.filters  Header.h  ObjectFactory.cpp  ObjectFactory.h  ObjectTypes.h  Objects.cpp  Objects.h  Point3D.cpp  Point3D.h  Utils.h  Vector3D.cpp  Vector3D.h
CurvesLibrary/CurvesLibrary/x64/Debug/: CurvesLibrary.dll.recipe  CurvesLibrary.ilk  vc143.idb
CurvesLibrary/CurvesLibrary/x64/Debug/CurvesLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CurvesLibrary.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MSVC-win64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  TestTask.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
MSVC-win64/ConsoleApp/: cmake_install.cmake  consoleApp.vcxproj  consoleApp.vcxproj.filters
MSVC-win64/ConsoleApp/consoleApp.dir/Debug/: consoleApp.exe.recipe  consoleApp.ilk
MSVC-win64/ConsoleApp/consoleApp.dir/Debug/consoleApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  (+6 more)
MSVC-win64/CurvesLibrary/: CurvesKernel.vcxproj  CurvesKernel.vcxproj.filters  cmake_install.cmake  curveskernel_export.h
MSVC-win64/CurvesLibrary/CurvesKernel.dir/Debug/: CurvesKernel.dll.recipe  CurvesKernel.ilk
MSVC-win64/lib/Debug/: CurvesKernel.exp  consoleApp.exp
(+12 files in other folders)
